@@ -139,8 +139,8 @@ void HibernateBoot(char *image_filename)
 	mem_base = getmemorylimit() - allocSize;//TODO: lower this
 		
 	printf("mem_base %x\n", mem_base);
-			
-	if (!(long long)mem_base+allocSize<1024*bootInfo->extmem+0x100000)
+	// Rek : hibernate fix 
+	if (!((long long)mem_base+allocSize<1024*bootInfo->extmem+0x100000))
 	{
 		printf ("Not enough space to restore image. Press any key to proceed with normal boot.\n");
 		getc ();
